# marge-bot

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  deploy.yml  pylintrc  pyproject.toml  setup.cfg  tox.ini
marge/: __main__.py  app.py  approvals.py  batch_job.py  bot.py  branch.py  commit.py  git.py  gitlab.py  interval.py  job.py  merge_request.py  pipeline.py  project.py  single_merge_job.py  store.py  trailerfilter.py  user.py
tests/: git_repo_mock.py  gitlab_api_mock.py  test_app.py  test_approvals.py  test_batch_job.py  test_commit.py  test_git.py  test_gitlab.py  test_interval.py  test_job.py  test_merge_request.py  test_pipeline.py  test_project.py  test_single_job.py  test_store.py  test_user.py
